replaces custom button with blue-shark button—add class

--- a/ui/controls/ip-aliases.reel/table-header.reel/table-header.html
+++ b/ui/controls/ip-aliases.reel/table-header.reel/table-header.html
@@ -37,8 +37,12 @@
 </head>
 <body>
     <div data-montage-id="owner" class="TableHeader">
-        <div data-montage-id="deleteButton" class="Button--alert Button--icon"><svg><use xlink:href="#i-trashCan"/></svg></div>
-        <div data-montage-id="addButton" class="Button--create Button--icon"><svg><use xlink:href="#i-plus"/></svg></div>
+        <div data-montage-id="deleteButton" class="Button--alert Button--icon">
+            <svg><use xlink:href="#i-trashCan"/></svg>
+        </div>
+        <div data-montage-id="addButton" class="Button--add">
+            <svg><use xlink:href="#i-plus"/></svg>
+        </div>
     </div>
 </body>
 </html>
