--- a/ui/controls/viewer.reel/viewer.html
+++ b/ui/controls/viewer.reel/viewer.html
@@ -25,7 +25,7 @@
         },
 
         "createButton": {
-            "prototype": "montage/ui/button.reel",
+            "prototype": "blue-shark/ui/button.reel",
             "properties": {
                 "element": {"#": "createButton"}
             },
@@ -103,10 +103,8 @@
                 </button>
                 <span data-montage-id="title"></span>
             </div>
-            <div data-montage-id="createButton" class="Viewer-createButton">
-                <div class="Viewer-createButton-plus">
-                    <svg><use xlink:href="#i-plus"/></svg>
-                </div>
+            <div data-montage-id="createButton" class="Button--add g-margin-right--half">
+                <svg><use xlink:href="#i-plus"/></svg>
             </div>
         </div>
         <div data-montage-id="viewerControls" class="Viewer-controls">
