sets max-width for inspector titles, sets width for docker image, sets max width for list-item

--- a/ui/sections/containers/inspectors/docker-image.reel/docker-image.html
+++ b/ui/sections/containers/inspectors/docker-image.reel/docker-image.html
@@ -107,7 +107,7 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="DockerImage">
+    <div data-montage-id="owner" class="DockerImage" style="max-width: 33rem;">
         <div data-montage-id="inspector">
             <div data-montage-id="collection"></div>
             <div data-montage-id="name"></div>
