adds margin to container image tables

--- a/ui/sections/containers/inspectors/container.reel/container.html
+++ b/ui/sections/containers/inspectors/container.reel/container.html
@@ -411,8 +411,8 @@
         <div data-montage-id="version"></div>
         <div data-montage-id="host"></div>
         <div data-montage-id="expose_ports"></div>
-        <div data-montage-id="ports" class="g-margin-bottom"></div>
-        <div data-montage-id="volumes" class="g-margin-bottom"></div>
+        <div data-montage-id="ports" class="g-margin-bottom--double"></div>
+        <div data-montage-id="volumes" class="g-margin-bottom--double"></div>
         <div data-montage-id="environment" class="g-margin-bottom"></div>
         <div data-montage-id="networkSettings">
             <div data-montage-id="primary_network_mode"></div>
