adds wrapper to allow max width ellipsis on inspector title

--- a/ui/inspectors/inspector.reel/inspector.html
+++ b/ui/inspectors/inspector.reel/inspector.html
@@ -129,7 +129,9 @@
             <button data-montage-id="backButton" class="Inspector-backButton Button--icon Button--transparent g-margin-right--half">
                 <svg class="rotate-180"><use xlink:href="#i-arrow"/></svg>
             </button>
-            <span data-montage-id="title"></span>
+            <div class="Inspector-title">
+                <span data-montage-id="title"></span>
+            </div>
         </div>
         <div data-montage-id="errorMessage" class="Inspector-error"></div>
         <div class="Inspector-locked">
