--- a/ui/sections/containers/inspectors/container.reel/container.html
+++ b/ui/sections/containers/inspectors/container.reel/container.html
@@ -208,7 +208,7 @@
             },
             "bindings": {
                 "inspector": {"<-": "@inspector"},
-                "values": {"<-": "@owner.object.volumes"}
+                "values": {"<-": "@owner.object._volumes"}
             }
         },
 
