fixes bug on binding not showing inspector footer optional buttons

--- a/ui/inspectors/inspector.reel/inspector.html
+++ b/ui/inspectors/inspector.reel/inspector.html
@@ -58,7 +58,7 @@
                 "canDelete": {"<-": "!!@owner.canDelete && @owner.object.id.defined()"},
                 "canRevert": {"<-": "!!@owner.canRevert"},
                 "canSave": {"<-": "!!@owner.canSave"},
-                "isHidden": {"<-": "!!@owner.isFooterHidden || (!canSave && !canRevert && !canDelete)"},
+                "isHidden": {"<-": "!!@owner.isFooterHidden && !canSave && !canRevert && !canDelete"},
                 "isSaveDisabled": {"<-": "@owner.isSaveDisabled || @owner.validationController.hasMissingProperties"}
             },
             "listeners": [
