removes excessing top margin on certificate settings

--- a/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate.html
+++ b/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate.html
@@ -100,8 +100,8 @@
 <body>
     <div data-montage-id="owner" class="CryptoCertificate">
         <div data-montage-id="inspector">
-            <div data-montage-id="export" id="export"></div>
-            <div data-montage-id="noOperation" class="Updates-noOperation"></div>
+            <div data-montage-id="export" id="export" class="g-margin-bottom"></div>
+            <div data-montage-id="noOperation" class="Updates-noOperation flush-top"></div>
             <div data-montage-id="name"></div>
             <div data-montage-id="nameDisplay"></div>
             <div data-montage-id="certificateActionPlaceHolder"></div>
