Set default value and units to 0 hours for replication repeat interval
Ticket: #21635

--- a/ui/sections/storage/inspectors/replication.reel/replication.html
+++ b/ui/sections/storage/inspectors/replication.reel/replication.html
@@ -227,12 +227,13 @@
             }
         },
         "repetition": {
-            "prototype": "blue-shark/ui/field-duration.reel",
+            "prototype": "blue-shark/ui/field-number-unit.reel",
             "properties": {
                 "element": {"#": "repetition"},
                 "label": "Repeat Every"
             },
             "bindings": {
+                "units": {"<-": "@owner.repititionUnits"},
                 "value": {"<->": "@owner._repetition"}
             }
         }
