--- a/ui/sections/storage/inspectors/encrypted-volume-actions.reel/encrypted-volume-actions.html
+++ b/ui/sections/storage/inspectors/encrypted-volume-actions.reel/encrypted-volume-actions.html
@@ -26,14 +26,18 @@
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
-                "element": {"#": "inspector"}
+                "element": {"#": "inspector"},
+                "isFooterHidden": true
+            },
+            "bindings": {
+                "context": {"<-": "@owner.context"}
             }
         },
         "lockButton": {
             "prototype": "blue-shark/ui/button.reel",
             "properties": {
                 "element": {"#": "lockButton"},
-                "value": "Lock"
+                "value": "Lock volume"
             }
         },
         "unlockPassword": {
@@ -50,14 +54,14 @@
             "prototype": "blue-shark/ui/button.reel",
             "properties": {
                 "element": {"#": "unlockButton"},
-                "value": "Unlock"
+                "value": "Unlock volume"
             }
         },
         "rekeySection": {
-            "prototype": "ui/controls/foldable-section.reel",
+            "prototype": "ui/controls/inspector-section-title.reel",
             "properties": {
                 "element": {"#": "rekeySection"},
-                "title": "Re-key"
+                "value": "Re-key"
             }
         },
         "rekeyKey": {
@@ -74,7 +78,8 @@
             "prototype": "blue-shark/ui/field-password-input.reel",
             "properties": {
                 "element": {"#": "rekeyPassword"},
-                "label": "Password"
+                "label": "Password",
+                "placeholder": "enter password..."
             },
             "bindings": {
                 "value": {"<->": "@owner.object.rekeyPassword"}
@@ -91,10 +96,10 @@
             }
         },
         "keySection": {
-            "prototype": "ui/controls/foldable-section.reel",
+            "prototype": "ui/controls/inspector-section-title.reel",
             "properties": {
                 "element": {"#": "keySection"},
-                "title": "Key management"
+                "value": "Key management"
             }
         },
         "backupKey": {
@@ -153,28 +158,29 @@
     <div data-montage-id="owner" class="EncryptedVolumeActions">
         <div data-montage-id="inspector">
             <div class="section lockSection">
-                <div data-montage-id="lockButton"></div>
+                <div data-montage-id="lockButton" class="Button--block"></div>
             </div>
+
             <div class="section unlockSection">
                 <div data-montage-id="unlockPassword"></div>
                 <div data-montage-id="unlockButton"></div>
             </div>
 
-            <div data-montage-id="rekeySection" class="section rekeySection">
-                <div data-montage-id="rekeyKey"></div>
-                <div data-montage-id="rekeyPassword"></div>
-                <div data-montage-id="rekeyButton"></div>
+            <div data-montage-id="rekeySection" class="section rekeySection"></div>
+            <div data-montage-id="rekeyKey"></div>
+            <div data-montage-id="rekeyPassword"></div>
+            <div data-montage-id="rekeyButton"></div>
+
+            <div data-montage-id="keySection" class="backupSection restoreSection"></div>
+            <div class="section backupSection">
+                <div data-montage-id="backupKey" class="g-margin-bottom"></div>
+                <div data-montage-id="backupKeyPassword"></div>
             </div>
-            <div data-montage-id="keySection" class="backupSection restoreSection">
-                <div class="section backupSection">
-                    <div data-montage-id="backupKey"></div>
-                    <div data-montage-id="backupKeyPassword"></div>
-                </div>
-                <div class="section restoreSection">
-                    <div data-montage-id="uploadKey"></div>
-                    <div data-montage-id="restoreKeyPassword"></div>
-                    <div data-montage-id="restoreKey"></div>
-                </div>
+
+            <div class="section restoreSection">
+                <div data-montage-id="uploadKey"></div>
+                <div data-montage-id="restoreKeyPassword"></div>
+                <div data-montage-id="restoreKey"></div>
             </div>
         </div>
     </div>
