Revert "Remove old code"
This reverts commit ac02d2e808050ceb67bb08c2ae4a21bf38d95631.

--- a/ui/drawer.reel/drawer.html
+++ b/ui/drawer.reel/drawer.html
@@ -8,6 +8,10 @@
             "properties": {
                 "element": {"#": "owner"},
                 "_drawerItems": {"@": "items"}
+            },
+            "bindings": {
+                "dashboardWidgets": {"<-": "@owner.currentUser.attributes.dashboardContext.widgets"},
+                "sideBoardWidgets": {"<-": "@owner.currentUser.attributes.sideBoardContext.widgets"}
             }
         },
         "title": {
