Fix Retry button

--- a/ui/sections/storage/inspectors/replication.reel/replication.html
+++ b/ui/sections/storage/inspectors/replication.reel/replication.html
@@ -233,7 +233,7 @@
                 "label": "Repeat Every"
             },
             "bindings": {
-                "units": {"<-": "@owner.repititionUnits"},
+                "units": {"<-": "@owner.repetitionUnits"},
                 "value": {"<->": "@owner._repetition"}
             }
         }
