adds required fields and wont allow empty rows

--- a/ui/controls/ip-aliases.reel/ip-address.reel/ip-address.html
+++ b/ui/controls/ip-aliases.reel/ip-address.reel/ip-address.html
@@ -97,7 +97,8 @@
             "prototype": "blue-shark/ui/text-field.reel",
             "properties": {
                 "element": {"#": "address"},
-                "errorName": "Address"
+                "errorName": "Address",
+                "isMandatory": true
             },
             "bindings": {
                 "value": {"<->": "@owner.object.address"},
@@ -112,7 +113,8 @@
             "prototype": "blue-shark/ui/text-field.reel",
             "properties": {
                 "element": {"#": "netmask"},
-                "errorName": "Netmask"
+                "errorName": "Netmask",
+                "isMandatory": true
             },
             "bindings": {
                 "value": {"<->": "@owner.object.netmask"},
