--- a/ui/controls/ip-aliases.reel/ip-aliases.html
+++ b/ui/controls/ip-aliases.reel/ip-aliases.html
@@ -19,6 +19,7 @@
                 "delegate": {"@": "owner"},
                 "emptyMessage": "There are no addresses setup",
                 "emptyActionLabel": "Add address",
+                "canAddWithError": false,
                 "columns":  [
                     {
                         "value": "Type"
