A few tweaks to the confirmation message.
Ticket: #21786

--- a/ui/sections/system/inspectors/preferences.reel/preferences.html
+++ b/ui/sections/system/inspectors/preferences.reel/preferences.html
@@ -168,7 +168,7 @@
                 "confirmLabel": "Factory Restore"
             },
             "bindings": {
-                "confirmMessage": {"<-": "'Are you sure you want to do a factory restore?  The box will reboot after a factory restore and the root password will be reset upon boot up.'"}
+                "confirmMessage": {"<-": "'Are you sure you want to do a factory restore?  The box will reboot after a factory restore and the root password will be reset upon boot up.  You will need to set the root password from the CLI in order to log back in.'"}
             }
         }
     }
