adds spacing to calendar-task time

--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -255,7 +255,7 @@
                     <div data-montage-id="customOptionButton"></div>
                 </div>
             </div>
-            <div data-montage-id="optionTimeCondition">
+            <div data-montage-id="optionTimeCondition" class="g-margin-bottom">
                 <div data-montage-id="optionTime"></div>
             </div>
         </div>
