calendar layout bug fixes for FF

--- a/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget.html
@@ -185,7 +185,7 @@
             </div>
 
         </header>
-        <main data-montage-id="viewSubstitution">
+        <main data-montage-id="viewSubstitution" class="Calendar-view-substitution">
             <div data-arg="month" data-montage-id="monthView"></div>
             <div data-arg="week" data-montage-id="weekView" class="CalendarWidget-view"></div>
             <div data-arg="day" data-montage-id="dayView" class="CalendarWidget-view"></div>
