--- a/ui/inspectors/calendar.reel/calendar.html
+++ b/ui/inspectors/calendar.reel/calendar.html
@@ -47,7 +47,8 @@
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
-                "element": {"#": "inspector"}
+                "element": {"#": "inspector"},
+                "isFooterHidden": true
             },
             "bindings": {
                 "context": {"<-": "@owner.context"}
