removes bg color on custom calendar settings

--- a/ui/inspectors/cron-job.reel/cron-job.html
+++ b/ui/inspectors/cron-job.reel/cron-job.html
@@ -15,6 +15,9 @@
             "properties": {
                 "element": {"#": "inspector"},
                 "isFooterHidden": true
+            },
+            "bindings": {
+                "context": {"<-": "@owner.context"}
             }
         },
         "months": {
