adds WIP binding for traffic-light pulsing

--- a/ui/controls/traffic-light.reel/traffic-light.html
+++ b/ui/controls/traffic-light.reel/traffic-light.html
@@ -10,6 +10,7 @@
             },
             "bindings": {
                 "classList.has('is-hidden')": {"<-": "!@owner.colorMapping || !!@owner.isHidden"},
+                "classList.has('is-loading')": {"<-": "@owner.value == 'CONNECTING'"},
                 "lightClass": {"<-": "@owner.colorMapping[@owner.value]"}
             }
         }
