--- a/ui/inspectors/service.reel/dc-service.reel/dc-service.html
+++ b/ui/inspectors/service.reel/dc-service.reel/dc-service.html
@@ -56,7 +56,7 @@
                 "disabled": {"<-": "@owner.context.object.state != 'RUNNING'"}
             }
         }
-      
+
     }
     </script>
 </head>
@@ -64,9 +64,7 @@
     <div data-montage-id="owner" class="DcService">
         <div data-montage-id="volume"></div>
         <div data-montage-id="ip"></div>
-        <div data-montage-id="dcUrl"></div>
-        
-
+        <div data-montage-id="dcUrl" class="g-margin-bottom"></div>
     </div>
 </body>
 </html>
