hides directory services footer

--- a/ui/sections/accounts/inspectors/directory-services.reel/directory-services.html
+++ b/ui/sections/accounts/inspectors/directory-services.reel/directory-services.html
@@ -24,7 +24,8 @@
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
                 "element": {"#": "inspector"},
-                "title": "Directory services"
+                "title": "Directory services",
+                "isFooterHidden": true
             }
         },
 
