--- a/ui/sections/accounts/inspectors/user.reel/user.html
+++ b/ui/sections/accounts/inspectors/user.reel/user.html
@@ -41,7 +41,8 @@
                 "canDelete": {"<-": "!@owner.object.builtin || !@owner.object.origin.read_only"},
                 "canRevert": {"<-": "(@owner.object.uid == 0) || !@owner.object.builtin || !@owner.object.origin.read_only"},
                 "canSave": {"<-": "(@owner.object.uid == 0) || !@owner.object.builtin || !@owner.object.origin.read_only"},
-                "extraDeleteFlags": {"<-": "@owner.extraDeleteFlags"}
+                "extraDeleteFlags": {"<-": "@owner.extraDeleteFlags"},
+                "isFooterHidden": {"<-": "@owner.object.builtin || @owner.object.origin.read_only"}
             }
         },
         "filesystemTreeController": {
