hides footer on system overview

--- a/ui/sections/system/inspectors/overview.reel/overview.html
+++ b/ui/sections/system/inspectors/overview.reel/overview.html
@@ -25,7 +25,8 @@
             "properties": {
                 "element": {"#": "inspector"},
                 "validationController": {"@": "validationController"},
-                "controller": {"@": "owner"}
+                "controller": {"@": "owner"},
+                "isFooterHidden": true
             },
             "bindings": {
                 "context": {"<-": "@owner.context"}
