--- a/ui/sections/system/inspectors/updates.reel/updates.html
+++ b/ui/sections/system/inspectors/updates.reel/updates.html
@@ -31,7 +31,8 @@
             "properties": {
                 "element": {"#": "inspector"},
                 "validationController": {"@": "validationController"},
-                "controller": {"@": "owner"}
+                "controller": {"@": "owner"},
+                "isFooterHidden": true
             },
             "bindings": {
                 "context": {"<-": "@owner.context"}
