hides footer on virtual machine datastore that can’t be edited

--- a/ui/sections/vms/inspectors/virtual-machine-datastore.reel/virtual-machine-datastore.html
+++ b/ui/sections/vms/inspectors/virtual-machine-datastore.reel/virtual-machine-datastore.html
@@ -34,7 +34,8 @@
             "bindings": {
                 "context": {"<-": "@owner.context"},
                 "canSave": {"<-": "!@owner.isVolumeDatastore"},
-                "canDelete": {"<-": "!@owner.isVolumeDatastore && !@owner.isNewObject"}
+                "canDelete": {"<-": "!@owner.isVolumeDatastore && !@owner.isNewObject"},
+                "isFooterHidden": {"<-": "!canSave && !canDelete"}
             }
         },
         "name": {
