inspector settings layout tweak

--- a/ui/sections/vms/inspectors/settings.reel/settings.html
+++ b/ui/sections/vms/inspectors/settings.reel/settings.html
@@ -85,7 +85,7 @@
             <div data-montage-id="network.nat"></div>
             <div data-montage-id="network.management"></div>
             <div data-montage-id="additional_templates"></div>
-            <div data-montage-id="flushTemplateCache"></div>
+            <div data-montage-id="flushTemplateCache" class="g-margin-bottom"></div>
         </div>
     </div>
 </body>
