adds width to calendar task and adds name placeholder
Ticket: #21843

--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -58,7 +58,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "name"},
-                "label": "Name"
+                "label": "Name",
+                "placeholder": "enter event name"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.name"}
