change the VM 'Start at boot' field to 'Autostart'
Ticket: #21847

--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
@@ -260,7 +260,7 @@
             "prototype": "blue-shark/ui/field-checkbox.reel",
             "properties": {
                 "element": {"#": "autostart"},
-                "label": "Start at Boot"
+                "label": "Auto start"
             },
             "bindings": {
                 "checked": {"<->": "@owner.object.config.autostart"}
