--- a/ui/sections/storage/inspectors/share.reel/share-permissions.reel/share-permissions.html
+++ b/ui/sections/storage/inspectors/share.reel/share-permissions.reel/share-permissions.html
@@ -29,7 +29,8 @@
             "prototype": "ui/controls/search-users.reel",
             "properties": {
                 "element": {"#": "ownerUser"},
-                "label": "Owner user"
+                "label": "Owner user",
+                "valuePath": "username"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.permissions.user"}
@@ -39,7 +40,8 @@
             "prototype": "ui/controls/search-groups.reel",
             "properties": {
                 "element": {"#": "ownerGroup"},
-                "label": "Owner group"
+                "label": "Owner group",
+                "valuePath": "name"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.permissions.group"}
